# class_util_server

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2019-08-07-013431_create_courses/: down.sql  up.sql
migrations/2019-08-07-013705_create_instructors/: down.sql  up.sql
migrations/2019-08-07-014242_create_semesters/: down.sql  up.sql
migrations/2019-08-07-014700_create_terms/: down.sql  up.sql
migrations/2019-08-07-014911_create_sections/: down.sql  up.sql
migrations/2019-08-07-021016_create_pathways/: down.sql  up.sql
src/: lib.rs  models.rs  queries.rs  schema.rs
