[package]
name = "class_util_server"
version = "0.1.0"
authors = ["PhilipConte <philip@pconte.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "class_util_server_db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.3", features = ["numeric", "postgres"] }
dotenv = "0.15.0"
slug = "0.1.4"
bigdecimal = { version = "0.1.0", features = ["serde"] }
csv = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
